--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
   <script>
-    window.$ = window.jQuery = require('./jquery.js');
+    window.$ = window.jQuery = require('jquery');
     require('./app.js');
   </script>
 </body>
