Add log area in window

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
   </div>
   <button id='submit-button'>Submit</button>
 
+  <nav>
+    <ol>
+        
+    </ol>
+  </nav>
+
+  <button id='clear-logs-button'>Clear</button>
+
 
   <script>
     window.$ = window.jQuery = require('jquery');
